Updated Quick start (markdown)