@@ -5,18 +5,10 @@ Download the file from [`https://github.com/downloads/archivesspace/archivesspac
 Then, get to a command prompt and enter this command (this has been tested on Windows and Linux, see below for OS X).
 
 ```sh
-java -jar archivesspace.v0.2.2.jar
+java -XX:MaxPermSize=128m -Dfile.encoding=UTF-8 -jar archivesspace.v0.2.2.jar
 ```
 
 This will start the ArchivesSpace application running on `http://localhost:8080/` and the backend web service running on `http://localhost:8089/`.
-
-## OS X: java.lang.OutOfMemoryError: PermGen space
-
-On OS X, I needed to add `-XX:PermSize=128m -XX:MaxPermSize=256m` to avoid the above error.
-
-```sh
-java -XX:PermSize=128m -XX:MaxPermSize=256m -jar archivesspace.v0.2.2.jar
-```
 
 ## listen on different ports
 
@@ -25,3 +17,4 @@ If you’d like to use different ports, you can run:
 ```sh
 java -jar archivesspace.v0.2.2.jar [frontend port] [backend port]
 ```
+[frontend port] and [backend port] are placeholders for actual numbers, such as 8081 8082
